--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,61 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/lblBienvenido"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margenSuperior"
+        android:id="@+id/lblBienvenida"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/lblQueDeseaHacer"
+        android:textSize="25dp"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="100dp"
+        android:layout_marginTop="@dimen/margenTituloSubtitulo"
+        android:id="@+id/lblQueDeseaHacer"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnActividades"
+        android:layout_marginTop="@dimen/margenSupButon"
+        android:layout_marginBottom="@dimen/margenInfButon"
+        android:id="@+id/btnActividades"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnPuntuaciones"
+        android:layout_marginTop="@dimen/margenSupButon"
+        android:layout_marginBottom="@dimen/margenInfButon"
+        android:id="@+id/btnPuntuacion"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnNuevoNombreUsuario"
+        android:layout_marginTop="@dimen/margenSupButon"
+        android:layout_marginBottom="@dimen/margenInfButon"
+        android:id="@+id/btnUsuario"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnAyuda"
+        android:layout_marginTop="@dimen/margenSupButon"
+        android:layout_marginBottom="@dimen/margenInfButon"
+        android:id="@+id/btnAyuda"/>
+
+</LinearLayout>
