--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="margenSuperior">20dp</dimen>
+    <dimen name="margenTituloSubtitulo">20dp</dimen>
+
+    //SEPARACION DE BOTONES
+    <dimen name="margenInfButon">5dp</dimen>
+    <dimen name="margenSupButon">5dp</dimen>
+
+
 </resources>
