--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical">
 
+    <!-- actividad principal - Pantalla inicial de la aplicacion -->
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
