--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,8 @@
     <dimen name="margenInfButon">5dp</dimen>
     <dimen name="margenSupButon">5dp</dimen>
 
+    <dimen name="tamLabelsTitulo">30dp</dimen>
+    <dimen name="tamLabelsSubtitulo">25dp</dimen>
+
 
 </resources>
