--- a/app/src/main/res/layout/dialogo_seleccion_nombre.xml
+++ b/app/src/main/res/layout/dialogo_seleccion_nombre.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ListView
         android:id="@+id/word_list"
@@ -15,6 +16,6 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
-        android:background="#ffbfff89" />
+        android:background="@color/abc_search_url_text_normal" />
 
 </LinearLayout>
