--- a/app/src/main/res/layout/dialogo_escuchando.xml
+++ b/app/src/main/res/layout/dialogo_escuchando.xml
@@ -3,4 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblEscucha"
+        android:text="@string/hablaAhora"
+        android:textSize="@dimen/tamLabelsSubtitulo"/>
+
+
 </LinearLayout>
