Dialogo continuar actividad imagen - puntuacion basica - inicio otras actividades -correccion imagenes tildes

--- a/app/src/main/res/layout/dialogo_escuchando.xml
+++ b/app/src/main/res/layout/dialogo_escuchando.xml
@@ -8,7 +8,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/lblEscucha"
         android:text="@string/hablaAhora"
-        android:textSize="@dimen/tamLabelsSubtitulo"/>
+        android:textSize="@dimen/tamLabelsSubtitulo"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/margenSuperior"
+        android:layout_marginBottom="@dimen/margenTituloSubtitulo" />
 
 
 </LinearLayout>
