--- a/app/src/main/res/layout/layout_menu_actividades.xml
+++ b/app/src/main/res/layout/layout_menu_actividades.xml
@@ -1,52 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/menu2">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/lblSeleccionActividad"
-        android:textSize="@dimen/tamLabelsTitulo"
-        android:layout_marginTop="@dimen/margenSuperior"
-        android:layout_marginBottom="@dimen/margenTituloSubtitulo"
+        android:textSize="25dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginBottom="70dp"
         android:gravity="center"
         android:id="@+id/lblSelectActividad"/>
 
-
-
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="45dp"
+        style="@style/buttonAct"
         android:text="@string/actividadImagen"
         android:id="@+id/btnActImagen"
-        android:layout_marginTop="@dimen/margenSupButon"
-        android:layout_marginBottom="@dimen/margenInfButon"
-        />
+        android:layout_marginTop="10dp"/>
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="45dp"
+        style="@style/buttonAct"
         android:text="@string/actividadPregunta"
         android:id="@+id/btnActPreguntas"
-        android:layout_marginTop="@dimen/margenSupButon"
-        android:layout_marginBottom="@dimen/margenInfButon"/>
+        android:layout_marginTop="@dimen/margenSupButon"/>
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="45dp"
+        style="@style/buttonAct"
         android:text="@string/actividadLetras"
         android:id="@+id/btnActLetras"
-        android:layout_marginTop="@dimen/margenSupButon"
-        android:layout_marginBottom="@dimen/margenInfButon"/>
+        android:layout_marginTop="@dimen/margenSupButon"/>
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="45dp"
+        style="@style/buttonAct"
         android:text="@string/actividadPintar"
-        android:id="@+id/btnActPintar"
-        android:layout_marginTop="@dimen/margenSupButon"
-        android:layout_marginBottom="@dimen/margenInfButon"/>
+        android:id="@+id/btnActPintar"/>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text=""
+        android:background="@android:color/transparent"/>
 
 
 </LinearLayout>
