--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -16,7 +16,7 @@
         android:textStyle="bold"
         android:textSize="@dimen/tamLabelsTitulo"
         android:gravity="center_horizontal"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="@dimen/margenTituloMenuPrincipalSuperior"
         android:id="@+id/lblBienvenida"/>
 
     <TextView
@@ -25,7 +25,7 @@
         android:text="@string/lblQueDeseaHacer"
         android:textSize="@dimen/tamLabelsSubtitulo"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="@dimen/margenButonSubtituloMenuPrincipal"
         android:id="@+id/lblQueDeseaHacer"/>
 
     <Button
