--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,7 @@
     <dimen name="margenSupButon">5dp</dimen>
 
 
-    //TAM LABELS
+    //SIZE LETRA LABELS
     <dimen name="tamLabelsTitulo">28dp</dimen>
     <dimen name="tamLabelsSubtitulo">25dp</dimen>
 
@@ -22,6 +22,15 @@
     //EDIT-TEXT
     <dimen name="altoEditText">50dp</dimen>
 
+    //correctos y revisados COMPARTIDOS
+    <dimen name="margenTituloMenuPrincipalSuperior">150dp</dimen>
+    <dimen name="margenTopTituloMenuActividades">110dp</dimen>
+    <dimen name="margenButonTituloMenuActividades">70dp</dimen>
+    <dimen name="margenSuperiorBotonAtrasMenuActividades">80dp</dimen>
+
+    <dimen name="margenButonSubtituloMenuPrincipal">100dp</dimen>
+
+
     //pintar
     <dimen name="small_brush">10dp</dimen>
     <integer name="small_size">10</integer>
@@ -29,7 +38,6 @@
     <integer name="medium_size">20</integer>
     <dimen name="large_brush">30dp</dimen>
     <integer name="large_size">30</integer>
-
 
 
 </resources>
