--- a/app/src/main/res/layout/dialogo_ingreso_nombre.xml
+++ b/app/src/main/res/layout/dialogo_ingreso_nombre.xml
@@ -24,7 +24,8 @@
         android:textSize="@dimen/tamLabelsTitulo"
         android:layout_marginTop="@dimen/margenTituloSubtitulo"
         android:checked="false"
-        android:layout_weight="0.04" />
+        android:layout_weight="0.04"
+        />
 
 
 </LinearLayout>
