--- a/app/src/main/res/layout/dialogo_continuar.xml
+++ b/app/src/main/res/layout/dialogo_continuar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffbdffa2">
 
     <TextView
         android:layout_width="fill_parent"
@@ -22,7 +23,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/continuar"
-        android:id="@+id/btnContinuar"/>
+        android:id="@+id/btnContinuar"
+        android:background="#ff65ff3a"
+        android:textSize="@dimen/tamaLetraBotonInicio"
+        android:drawableRight="@drawable/siguiente"
+        android:drawableLeft="@drawable/siguiente"/>
 
 
 
