--- a/app/src/main/res/layout/dialogo_escuchando.xml
+++ b/app/src/main/res/layout/dialogo_escuchando.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffb8ff98">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lblEscucha"
         android:text="@string/hablaAhora"
-        android:textSize="@dimen/tamLabelsSubtitulo"
+        android:textSize="@dimen/tamLabelsTitulo"
+        android:textStyle="bold"
         android:gravity="center"
         android:layout_marginTop="@dimen/margenSuperior"
-        android:layout_marginBottom="@dimen/margenTituloSubtitulo" />
+        android:layout_marginBottom="@dimen/margenTituloSubtitulo"
+        android:drawableTop="@drawable/boca"/>
 
 
 </LinearLayout>
