--- a/app/src/main/res/layout/layout_imagenes.xml
+++ b/app/src/main/res/layout/layout_imagenes.xml
@@ -43,7 +43,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/pronunciar"
-        android:id="@+id/btnPronunciarImagen"/>
+        android:id="@+id/btnPronunciarImagen"
+        android:drawableLeft="@drawable/boca"/>
 
 
     <LinearLayout
