Actividad Letras completa y puntuaciones imagenes y preguntas

--- a/app/src/main/res/layout/layout_letras.xml
+++ b/app/src/main/res/layout/layout_letras.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/letrasfondo">
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/tamLabelsTitulo"
+        android:text="@string/letrasTitulo"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/tamLabelsSubtitulo"
+        android:text="@string/instruccionLetras"/>
+
+    <ImageButton
+        android:id="@+id/imageButonReproducir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/escuchar"
+        android:layout_gravity="center"/>
+
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView" />
 
 </LinearLayout>
