--- a/app/src/main/res/layout/layout_puntuacion.xml
+++ b/app/src/main/res/layout/layout_puntuacion.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/menupunt">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:text="@string/puntuaciontitulo"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/margenTituloSubtitulo"
+        android:textStyle="bold"/>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"></TableRow>
+
+ <!--   <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"> -->
+
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView" />
+
+ <!--   </ScrollView> -->
+
 
 </LinearLayout>
