--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,9 +20,12 @@
     <style name="buttonAct" parent="@android:style/Widget.Button">
         <item name="android:layout_gravity">right</item>
         <item name="android:gravity">center_vertical|center_horizontal</item>
-        <item name="android:textSize">16dip</item>
+        <item name="android:textSize">20dip</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@android:color/transparent</item>
+  <!--      <item name="android:background">@android:color/transparent</item> -->
+        <item name="android:background">@drawable/btnmadera</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:alpha">0.8</item>
     </style>
 
 </resources>
